--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0",
+    "react-router-dom": "^6.4.2",
+    "sass": "^1.55.0"
   }
 }
